<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flickr Photos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="photo_item">Photo item to show</string>
    <string name="search_hint_text">Search Flickr</string>
        
    <string name="photo_author_image">Photo auther image</string>
    <string name="photo_favourate">Photo favorate</string>
    <string name="photo_share">Photo share</string>
    <string name="photo_infor">Photo information</string>
    <string name="photo_comments">Photo comments</string>
    <string name="big_photo_show">Big photo</string>
    <string name="photo_title">Photo title</string>
    <string name="photo_fave_num">faves</string>
    <string name="photo_comment_num">comments</string>
    <string name="photo_author_name">author name</string>
    <string name="close_big_photo">Close the big photo</string>

    <string name="gallery_title">gallery title</string>
    
    <string name="photographer_title">20 under 20</string>
</resources>
